--- a/style.css
+++ b/style.css
@@ -173,3 +173,202 @@ main {
   color: #c7365f;
   background-color: #2f2f2f;
 }
+
+@media only screen and (max-width: 377px)  {
+
+  .main {
+    position: relative;
+    width: 100rem;
+    height: 50rem;
+    background-color: rgba(255, 255, 255, 0.35);
+    backdrop-filter: blur(200px);
+    filter: blur();
+    box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
+    border-radius: 9px;
+    overflow: hidden;
+    display: flex;
+}
+
+  .player {
+    flex: 50%;
+    padding: 0rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all 0.75s;
+  }
+  .name {
+    position: relative;
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    font-weight: 300;
+    margin-bottom: 1rem;
+    margin-top: 8rem;
+}
+
+.score {
+  font-size: 6rem;
+  font-weight: 300;
+  color: #c7365f;
+  margin-bottom: auto;
+}
+
+.current {
+  background-color: #c7365f;
+  opacity: 0.8;
+  border-radius: 9px;
+  color: #fff;
+  width: 67%;
+  padding: 2rem;
+  text-align: center;
+  transition: all 0.75s;
+  margin-bottom: 2rem;
+  height: 11rem;
+}
+.btn--new {
+  top: 3rem;
+  font-size: 16px;
+}
+.btn::first-letter {
+  font-size: 1.4rem;
+  display: inline-block;
+  margin-right: 0.7rem;
+}
+.btn--roll {
+  top: 31.3rem;
+}
+.btn--hold {
+  top: 37.1rem;
+}
+
+.dice {
+  position: absolute;
+  left: 50%;
+  top: 16.5rem;
+  transform: translateX(-50%);
+  height: 7rem;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+}
+}
+@media only screen and (max-width: 431px) and (min-width: 379px){
+  main {
+    position: relative;
+    width: 100rem;
+    height: 64rem;
+    background-color: rgba(255, 255, 255, 0.35);
+    backdrop-filter: blur(200px);
+    filter: blur();
+    box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
+    border-radius: 9px;
+    overflow: hidden;
+    display: flex;
+  }
+
+  .player {
+    flex: 50%;
+    padding: 0rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all 0.75s;
+  }
+
+  .name {
+    position: relative;
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    font-weight: 300;
+    margin-bottom: 1rem;
+    margin-top: 8rem;
+}
+
+.score {
+  font-size: 6rem;
+  font-weight: 300;
+  color: #c7365f;
+  margin-bottom: auto;
+}
+
+.current {
+  background-color: #c7365f;
+  opacity: 0.8;
+  border-radius: 9px;
+  color: #fff;
+  width: 67%;
+  padding: 2rem;
+  text-align: center;
+  transition: all 0.75s;
+  margin-bottom: 2rem;
+  height: 11rem;
+}
+.btn--new {
+  top: 3rem;
+  font-size: 16px;
+}
+.btn::first-letter {
+  font-size: 1.4rem;
+  display: inline-block;
+  margin-right: 0.7rem;
+}
+
+  .btn--roll {
+    top: 37.3rem;
+  }
+
+  .btn--hold {
+    top: 43.1rem;
+  }
+  .dice {
+    position: absolute;
+    left: 50%;
+    top: 24.5rem;
+    transform: translateX(-50%);
+    height: 7rem;
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+  }
+
+ 
+
+
+}
+
+@media only screen and (max-width: 760px) and (min-width: 480px){
+  .player {
+    flex: 50%;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all 0.75s;
+}
+  .score {
+    font-size: 8rem;
+    font-weight: 300;
+    color: #c7365f;
+    margin-bottom: 108%;
+}
+  .btn--hold {
+  top: 39.1rem;
+}
+
+.btn--roll {
+  top: 33.3rem;
+}
+.btn--new {
+  top: 5rem;
+}
+
+.name {
+  position: relative;
+  font-size: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  word-spacing: 2px;
+  font-weight: 300;
+  margin-bottom: 1rem;
+}
+}
